--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="img/diamond-icon.png">
-    <title>Tomato</title>  
+    <link rel="icon" href="img/icons8-homer-simpson-480.png">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <title>@banhsmif</title>  
 </head>
 <body>
-    <header class="header">
-        
+    <header>
+        <p>@banhsmif</p>
     </header>
 </body>
 </html>
